fixed the z-index for the export dropwdown on pages headers

--- a/src/assets/styles/Notification.css
+++ b/src/assets/styles/Notification.css
@@ -22,6 +22,7 @@
         left: 15%;
     padding-top: 5em;
     padding-left: 10%;
+    z-index: -2;
 }
 
 
